--- a/Packt-OpenGL-GLSL/Packt-OpenGL-GLSL.vcxproj
+++ b/Packt-OpenGL-GLSL/Packt-OpenGL-GLSL.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{460e4f1b-14d9-422b-96ce-6d7c113fcaeb}</ProjectGuid>
     <RootNamespace>PacktOpenGLGLSL</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Packt-OpenGL-GLSL</ProjectName>
+    <ProjectName>Triangle</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
